# ai_rag_user_guide

./: README.md  main.py  pyproject.toml
data/faiss_index/: index.faiss  index.pkl
src/: app.py  build_vector_store.py  eda.ipynb
